--- a/kd/ingress.yaml
+++ b/kd/ingress.yaml
@@ -2,21 +2,24 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  labels:
+    stable.k8s.psg.io/kcm.class: default
   annotations:
-    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx-external"
     ingress.kubernetes.io/secure-backends: "true"
     ingress.kubernetes.io/whitelist-source-range: "{{.WHITELIST}}"
-  name: pttg-ip-fm-audit-ui
+    stable.k8s.psg.io/kcm.provider: http
+  name: pttg-ip-fm-ui-ingress-external
 spec:
+  tls:
+  - hosts:
+    - {{.DOMAIN_NAME}}
+    secretName: letsencrypt-pttg-ip-fm-ui
   rules:
-  - host: ip.audit.{{.DNS_PREFIX}}pttg.homeoffice.gov.uk
+  - host: {{.DOMAIN_NAME}}
     http:
       paths:
       - backend:
           serviceName: pttg-ip-fm-audit-ui
           servicePort: 443
         path: /
-  tls:
-  - hosts:
-    - ip.audit.{{.DNS_PREFIX}}pttg.homeoffice.gov.uk
-    secretName: letsencrypt-pttg-ip-fm-audit-ui
