--- a/kd/deployment.yaml
+++ b/kd/deployment.yaml
@@ -167,7 +167,7 @@ spec:
           timeoutSeconds: 10
         readinessProbe:
             httpGet:
-              path: /healthz
+              path: /ping
               port: http
               httpHeaders:
                 - name: X-probe
