--- a/kd/deployment.yaml
+++ b/kd/deployment.yaml
@@ -119,7 +119,7 @@ spec:
           - name: keycloak-http
             containerPort: 9000
         volumeMounts:
-        - name: keycloak-api-secret
+        - name: keycloak-api-audit-secret
           mountPath: /etc/secrets
           readOnly: true
       - name: pttg-ip-fm-audit-ui
