Create the secret volume before using it in a container

--- a/kd/deployment.yaml
+++ b/kd/deployment.yaml
@@ -185,7 +185,7 @@ spec:
             medium: "Memory"
         - name: keycloak-api-secret
           secret:
-            secretName: keycloak-api-secret
+            secretName: keycloak-api-audit-secret
         - name: bundle
           configMap:
             name: bundle
