Create the secret volume before using it in a container

--- a/kd/deployment.yaml
+++ b/kd/deployment.yaml
@@ -183,7 +183,7 @@ spec:
         - name: certs
           emptyDir:
             medium: "Memory"
-        - name: keycloak-api-secret
+        - name: keycloak-api-audit-secret
           secret:
             secretName: keycloak-api-audit-secret
         - name: bundle
