--- a/kd/ingress.yaml
+++ b/kd/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     stable.k8s.psg.io/kcm.class: default
   annotations:
     kubernetes.io/ingress.class: "nginx-external"
-    ingress.kubernetes.io/secure-backends: "true"
+    ingress.kubernetes.io/backend-protocol: "HTTPS"
     ingress.kubernetes.io/whitelist-source-range: "{{.WHITELIST}}"
     stable.k8s.psg.io/kcm.provider: http
   name: pttg-ip-fm-audit-ui-ingress-external
